[package]
name = "pslib"
version = "0.0.0"
edition = "2021"
authors = ["Kyle Andrews <codingwithkyle@gmail.com"]
repository = "https://github.com/codewithkyle/pslib"
homepage = "https://github.com/codewithkyle/pslib"
description = """
Empty crate, used only to reserve the name during inital development.
"""

[dependencies]
